docs: Dev Plan v0.2, specify target

--- a/软件项目开发计划.md
+++ b/软件项目开发计划.md
@@ -12,15 +12,16 @@
 ### 3.1. 项目目标
 + 功能目标：实现行程记录功能，实现好友系统和基于其上的智能推荐系统。
 + 质量目标：数据库能够支持十万量级的用户，并支持百量级的用户同时访问操作
-+ 成本目标: 本地开发，普通VPS运行
++ 成本目标: 本地开发，普通VPS服务器运行
 + 交货期目标：2019年6月6日前交付最终版本
 
 ### 3.2. 项目范围
-+ 功能范围：行程记录，自定义地图生成，添加好友，智能推荐
-+ 工程范围：地图信息的获取，数据库建立和维护，前端交互界面
++ 功能范围：行程记录；自定义地图生成（样式、颜色）；添加好友；智能推荐
++ 工程范围：
+    + 前端：交互式地图；地点查询；好友界面
+    + 后端：路线规划；相似度匹配；数据库实现
 
 ## 4. 主要参与人员
-需列出项目涉及的所有利益相关者，而不仅仅是开发团队成员
 
 |姓名|项目中角色/职责|工作内容|工作时间|
 |:--:|:--:|:--:|:--:|
@@ -41,7 +42,7 @@
 |资源名称|详细配置|获取方式|用途|
 |:--:|:--:|:--:|:--:|
 |计算机|--|组员个人持有|开发、调试|
-|服务器|--|个人持有（VPS）|上线测试、最终运行|
+|服务器|--|个人持有（VPS）或短时间租赁|上线测试、最终运行|
 
 ## 6. 项目进度计划
 本文档的核心内容，描述项目任务的分解、具体时间的安排和责任人员，采用甘特图的方式进行描述。
