--- a/软件项目开发计划.md
+++ b/软件项目开发计划.md
@@ -1,7 +1,7 @@
 # 软件项目开发计划
 ## 1. 引言
 + 本文档是2019年春季北京大学软件工程第一小组课程实践项目的文档。
-+ 目前文档版本是0.1，最后修改时间为2019年3月14日。
++ 目前文档版本是0.3，最后修改时间为2019年3月16日。
 
 
 ## 2. 项目基本信息
@@ -19,7 +19,7 @@
 + 功能范围：行程记录；自定义地图生成（样式、颜色）；添加好友；智能推荐
 + 工程范围：
     + 前端：交互式地图；地点查询；好友界面
-    + 后端：路线规划；相似度匹配；数据库实现
+    + 后端：路线规划；相似度匹配；数据库
 
 ## 4. 主要参与人员
 
