docs: Dev Plan, add details

--- a/项目开发计划与甘特图/软件项目开发计划.md
+++ b/项目开发计划与甘特图/软件项目开发计划.md
@@ -1,7 +1,8 @@
 # 软件项目开发计划
 ## 1. 引言
 + 本文档是2019年春季北京大学软件工程第一小组课程实践项目的文档。
-+ 目前文档版本是0.3，最后修改时间为2019年3月16日。
++ 目前文档版本是0.9，最后修改时间为2019年3月19日。
++ 本项目所有代码见 https://github.com/skyetim/software_engineering_project
 
 
 ## 2. 项目基本信息
@@ -13,7 +14,7 @@
 + 功能目标：实现行程记录功能，实现好友系统和基于其上的智能推荐系统。
 + 质量目标：数据库能够支持十万量级的用户，并支持百量级的用户同时访问操作
 + 成本目标: 本地开发，普通VPS服务器运行
-+ 交货期目标：2019年6月6日前交付最终版本
++ 交货期目标：2019年5月16日前完成核心代码部分，6月5日前交付最终版本
 
 ### 3.2. 项目范围
 + 功能范围：行程记录；自定义地图生成（样式、颜色）；添加好友；智能推荐
@@ -46,5 +47,4 @@
 
 ## 6. 项目进度计划
 - 项目进度计划甘特图
-
-<img src='./gantetu.jpg' width=80%>
+![](ganttchart.jpg)
