docs: add requirements

--- a/doc/软件需求说明书.md
+++ b/doc/软件需求说明书.md
@@ -131,17 +131,32 @@
 |需求编号|01|
 |功能描述|用邮箱注册一个登录账号并填写个人信息|
 |输入数据|注册用邮箱：正则表达式验证邮箱格式|
-||验证码：6位数字|
+||密码：英文字母和阿拉伯数字组成，不超过12个字符|
 ||昵称：英文字母、阿拉伯数字和汉字组成，不超过12个字符|
 ||常住城市信息：包含于全国城市列表|
-|加工|确认邮箱为正确邮箱格式后系统向其发送6位验证码|
-||通过验证并完成其他信息的填写后生成用户ID|
+|加工|确认邮箱为正确邮箱格式且未注册后系统向其发送6位验证码|
+||确认用户输入验证码无误及用户所填其他信息的有效性|
+||将邮箱及个人信息保存在结构体并绑定到生成的唯一用户ID|
 |输出数据|用户ID：8位数字|
 ||输入数据不符合要求则提示用户重新输入|
+||邮箱已注册则提示用户用已有账号登录或更换邮箱|
+
+|需求名|登录账号|
+|:---:|:---:|
+|需求编号|02|
+|功能描述|输入邮箱和密码登录已注册的账号|
+|输入数据|注册用邮箱：正则表达式验证邮箱格式|
+||密码：英文字母和阿拉伯数字组成，不超过12个字符|
+|加工|确认邮箱存在且密码无误后查找相应用户ID|
+||通过唯一用户ID获得账号详细信息及好友、行迹列表|
+|输出数据|注册账号时保存的个人信息：包含昵称、常住城市|
+||好友列表：用户ID组成的数组|
+||行迹列表：行程ID组成的数组|
+||用户输入邮箱密码不匹配则提示重新输入|
 
 |需求名|记录行程|
 |:---:|:---:|
-|需求编号|02|
+|需求编号|05|
 |功能描述|向行迹列表添加一条行程记录|
 |输入数据|目的地：在地图上手动标出|
 ||时间：包含开始时间和结束时间两个8位数字|
@@ -153,13 +168,17 @@
 |输出数据|行程ID：10位数字|
 ||目的地城市：包含于全国城市列表|
 
-|需求名||
+|需求名|添加关联好友|
 |:---:|:---:|
-|需求编号|03|
-|功能描述||
-|输入数据||
-|加工||
-|输出数据||
+|需求编号|07|
+|功能描述|给一条行迹添加同行好友|
+|输入数据|行程ID：10位数字|
+||用户ID：8位数字，所添加关联好友的ID|
+|加工|查询该用户ID是否属于行程ID的关联好友数组|
+||若未关联则将用户ID加入该关联好友数组中|
+|输出数据|加入用户ID后的关联好友数组|
+||若已关联则提示用户该好友已在关联列表内|
+||若行程未完成则生成一条同行邀请信息发送到好友账号|
 
 （待补充修改）
 
