--- a/doc/软件需求说明书.md
+++ b/doc/软件需求说明书.md
@@ -126,6 +126,15 @@
 
 注：本系统无其他用户分类，因此所有功能的操作者均为用户。
 ## 3 功能需求
+
+顶层数据流图
+
+![顶层数据流图](https://github.com/skyetim/software_engineering_project/blob/doc/doc/%E9%A1%B6%E5%B1%82%E6%95%B0%E6%8D%AE%E6%B5%81%E5%9B%BE.png)
+
+0层数据流图
+
+![0层数据流图](https://github.com/skyetim/software_engineering_project/blob/doc/doc/0%E5%B1%82%E6%95%B0%E6%8D%AE%E6%B5%81%E5%9B%BE.png)
+
 |需求名|注册账号|
 |:---:|:---:|
 |需求编号|01|
@@ -154,17 +163,53 @@
 ||行迹列表：行程ID组成的数组|
 ||用户输入邮箱密码不匹配则提示重新输入|
 
+|需求名|添加好友|
+|:---:|:---:|
+|需求编号|03|
+|功能描述|向好友列表添加一个用户|
+|输入数据|目标用户ID|
+|加工|确认目标用户是否已在好友列表内|
+||未添加该好友则向其发送好友请求|
+|输出数据|发送到目标ID的好友请求|
+||好友已添加则弹出提示信息|
+
+|需求名|处理添加好友请求|
+|:---:|:---:|
+|需求编号|04|
+|功能描述|接受或拒绝来自其他用户的好友请求|
+|输入数据|请求用户ID|
+||布尔值，是否接受好友请求|
+|加工|由请求用户ID获取该用户基本信息|
+||弹出包含请求用户基本信息的提示|
+||获得用户输入的选项|
+|输出数据|接受请求则返回加入请求用户ID的好友列表|
+||将接受或拒绝的回复信息发回到请求用户|
+
 |需求名|记录行程|
 |:---:|:---:|
 |需求编号|05|
-|功能描述|向行迹列表添加一条行程记录|
+|功能描述|向行迹列表添加一条已完成的行程|
 |输入数据|目的地：在地图上手动标出|
 ||时间：包含开始时间和结束时间两个8位数字|
 ||可见性：布尔值，是否仅自己可见|
 ||备注信息：字符串，不超过64个字符|
 |加工|系统根据用户在地图上的标记取得目的地坐标|
 ||根据坐标获取目的地城市|
-||生成行程ID|
+||确认结束时间早于当前时间并生成行程ID|
+|输出数据|行程ID：10位数字|
+||目的地城市：包含于全国城市列表|
+
+|需求名|添加安排|
+|:---:|:---:|
+|需求编号|06|
+|功能描述|向行迹列表添加一条未完成的行程|
+|输入数据|目的地：在地图上手动标出|
+||时间：包含开始时间和结束时间两个8位数字|
+||可见性：布尔值，是否仅自己可见|
+||备注信息：字符串，不超过64个字符|
+|加工|系统根据用户在地图上的标记取得目的地坐标|
+||根据坐标获取目的地城市|
+||确认结束时间晚于当前时间并生成行程ID|
 |输出数据|行程ID：10位数字|
 ||目的地城市：包含于全国城市列表|
 
@@ -180,7 +225,37 @@
 ||若已关联则提示用户该好友已在关联列表内|
 ||若行程未完成则生成一条同行邀请信息发送到好友账号|
 
-（待补充修改）
+|需求名|删除关联好友|
+|:---:|:---:|
+|需求编号|08|
+|功能描述|给一条行迹删除关联好友|
+|输入数据|行程ID|
+||要删除的关联好友ID|
+|加工|将要删除的ID从行迹关联列表里移除|
+||如果是未完成的行程安排则向该好友发送取消信息|
+|输出数据|删除目标ID后的行迹关联列表|
+||向目标好友发送取消信息|
+
+|需求名|修改行迹信息|
+|:---:|:---:|
+|需求编号|09|
+|功能描述|修改已发布的一条行迹信息|
+|输入数据|行程ID|
+|加工|根据行程ID获取该行程当前信息|
+||对行程信息进行修改|
+||保存更新后的行程信息并刷新界面|
+|输出数据|更新后的行程信息|
+||向关联好友发送行程变更信息|
+
+|需求名|删除行迹|
+|:---:|:---:|
+|需求编号|10|
+|功能描述|删除一条已发布的行迹|
+|输入数据|行程ID|
+|加工|获取该ID行程的详细信息并显示|
+||确认删除后将该ID从用户的行程列表中移除|
+|输出数据|删除该ID后的行程列表|
+||向关联好友发送行程取消信息|
 
 ## 4 非功能需求
 ### 4.1 性能需求
