refactor: change variable name to snake case

--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -4,35 +4,35 @@
 + 最后更新时间2019/4/23，当前版本号v0.1，暂未完成。
 
 ## 用户相关接口
-|接口名称|输入参数|输出参数|备注|
-|:--:|:--:|:--:|:--:|
-|login|email,pswd(加密)|userid,match||
-|get_user_info|userid|username,email,gender,resident_cityid,status||
-|set_user_info|userid,username,email,gender,resident_cityid|status||
+| 接口名称      | 输入参数                                            | 输出参数                                           | 备注 |
+| :------------ | :-------------------------------------------------- | :------------------------------------------------- | :--- |
+| login         | email, pswd (加密)                                  | user_id, status                                    |      |
+| get_user_info | user_id                                             | user_name, email, gender, resident_city_id, status |      |
+| set_user_info | user_id, user_name, email, gender, resident_city_id | status                                             |      |
 
 ## 旅行相关接口
-|接口名称|输入参数|输出参数|备注|
-|:--:|:--:|:--:|:--:|
-|get_travelgroup_list|userid|[travelgroupid,travelgroupnote],status||
-|get_travel_list|travelgroupid|[travelid],status||
-|get_travelgroup_info|travelgroupid|travelgroupnote,status||
-|set_travelgroup_info|travelgroupid,travelgroupnote|status||
-|add_travelgroup|userid|travelgroupid,status||
-|get_travel_info|travelid|city_id,time_start,time_end,visable,travelnote,status||
-|set_travel_info|travelid,city_id,time_start,time_end,visable,travelnote||
-|add_travel|userid,travelgroupid|travelid,status||
+| 接口名称              | 输入参数                                                          | 输出参数                                                       | 备注 |
+| :-------------------- | :---------------------------------------------------------------- | :------------------------------------------------------------- | :--- |
+| get_travel_group_list | user_id                                                           | [travel_group_id, travel_group_note], status                   |      |
+| get_travel_list       | travel_group_id                                                   | [travel_id], status                                            |      |
+| get_travel_group_info | travel_group_id                                                   | travel_group_note, status                                      |      |
+| set_travel_group_info | travel_group_id, travel_group_note                                | status                                                         |      |
+| add_travel_group      | user_id, status                                                   | travel_group_id, status                                        |      |
+| get_travel_info       | travel_id                                                         | city_id, time_start, time_end, visibility, travel_note, status |      |
+| set_travel_info       | travel_id, city_id, time_start, time_end, visibility, travel_note |                                                                |
+| add_travel            | user_id, travel_group_id                                          | travel_id, status                                              |      |
 
 ## 城市相关接口
-|接口名称|输入参数|输出参数|备注|
-|:--:|:--:|:--:|:--:|
-|gps_to_city|latitude,longtitude|cityid,cityname,status||
-|address_to_city|address|cityid,cityname,status|address是模糊地址字符串，交由API处理|
-|city_to_gps|cityid,cityname,status|latitude,longtitude,status||
+| 接口名称        | 输入参数                   | 输出参数                    | 备注                                    |
+| :-------------- | :------------------------- | :-------------------------- | :-------------------------------------- |
+| gps_to_city     | latitude, longitude        | city_id, city_name, status  |                                         |
+| address_to_city | address                    | city_id, city_name, status  | address 是模糊地址字符串，交由 API 处理 |
+| city_to_gps     | city_id, city_name, status | latitude, longitude, status |                                         |
 ~~疑问：是否需要保留国家信息？~~
 
 ## 好友相关接口
-|接口名称|输入参数|输出参数|备注|
-|:--:|:--:|:--:|:--:|
-|get_friend_list|userid|[frienduserid,friendusername,friendnote],status||
+| 接口名称        | 输入参数 | 输出参数                                                | 备注 |
+| :-------------- | :------- | :------------------------------------------------------ | :--- |
+| get_friend_list | user_id  | [friend_user_id, friend_user_name, friend_note], status |      |
 
 ~~待添加：加/删好友；查看好友旅行列表；查看关联旅行；添加/删除关联行程~~
