--- a/doc/后端数据库概览.md
+++ b/doc/后端数据库概览.md
@@ -3,57 +3,57 @@
 + 本文档主要描述后端存储哪些数据库及其数据格式；
 + “行程组”描述一次旅行，“行程”描述一次旅行中到访的一个城市；
 + 目前只存在两种系统消息：加好友请求和关联行程请求，暂不支持用户间消息；
-+ 由于Markdown语法暂不支持下划线，因此以`key`标记主键；
-+ 最后更新时间2019/4/22，当前版本号v0.1。
++ 由于 Markdown 语法暂不支持下划线，因此以 `key` 标记主键；
++ 最后更新时间 2019/4/24，当前版本号v0.2。
 
 ## 用户信息
-|`userid`|username|email|pswd|gender|resident_cityid|
-|:--:|:--:|:--:|:--:|:--:|:--:|:--:|
-||||加密串|||
+| `user_id` | user_name | email |  pswd  |      gender       | resident_city_id |
+| :-------: | :-------: | :---: | :----: | :---------------: | :--------------: |
+|           |           |       | 加密串 | 男/女/其他/未指定 |                  |
 
 ## 好友关系
-|`userid`|frienduserid|friendnote|
-|:--:|:--:|:--:|
-|||备注信息，任意字符串|
+| `user_id` | friend_user_id |     friend_note      |
+| :-------: | :------------: | :------------------: |
+|           |                | 备注信息，任意字符串 |
 
 ## 用户-行程组
-|`userid`|`travelgroupid`|
-|:--:|:--:|
-|||
+| `user_id` | `travel_group_id` |
+| :-------: | :---------------: |
+|           |                   |
 
 ## 行程组
-|`travelgroupid`|travelgroupnote|
-|:--:|:--:|
-||备注信息，任意字符串|
+| `travel_group_id` |  travel_group_note   |
+| :---------------: | :------------------: |
+|                   | 备注信息，任意字符串 |
 
 ## 行程组-行程
-|`travelgroupid`|`travelid`|
-|:--:|:--:|
-|||
+| `travel_group_id` | `travel_id` |
+| :---------------: | :---------: |
+|                   |             |
 
 ## 行程信息
-|`travelid`|time_start|time_end|cityid|visable|travelnote|
-|:--:|:--:|:--:|:--:|:--:|:--:|:--:|
-|||||自己/好友/所有|备注信息，任意字符串|
+| `travel_id` | time_start | time_end | city_id |   visibility   |     travel_note      |
+| :---------: | :--------: | :------: | :-----: | :------------: | :------------------: |
+|             |            |          |         | 自己/好友/公开 | 备注信息，任意字符串 |
 
 ## 行程-好友关联
 
-|`travelid`|company_userid|
-|:--:|:--:|
-|||
+| `travel——id` | company_user_id |
+| :------------: | :-------------: |
+|                |                 |
 
 ## 城市信息
 
-|`cityid`|cityname|latitude|longitude|
-|:--:|:--:|:--:|:--:|
-|||||
+| `city_id` | city_name | latitude | longitude |
+| :-------: | :-------: | :------: | :-------: |
+|           |           |          |           |
 
 ## 好友请求消息
-|`userid`|frienduserid|msg_type|msg_content|
-|:--:|:--:|:--:|:--:|
-|||加好友/删好友||
+| `user_id` | friend_user_id |   msg_type    | msg_content |
+| :-------: | :------------: | :-----------: | :---------: |
+|           |                | 加好友/删好友 |             |
 
 ## 行程关联消息
-|`userid`|friendtravelid|msg_type|msg_content|
-|:--:|:--:|:--:|:--:|
-|||加入行程/离开行程||
+| `user_id` | friend_travel_id |              msg_type               | msg_content |
+| :-------: | :--------------: | :---------------------------------: | :---------: |
+|           |                  | 加入行程/离开行程/修改行程/删除行程 |             |
