chore: add class Time to represent travel time

--- a/doc/后端数据库概览.md
+++ b/doc/后端数据库概览.md
@@ -38,7 +38,7 @@
 
 ## 行程-好友关联
 
-| `travel——id` | company_user_id |
+| `travel_id` | company_user_id |
 | :------------: | :-------------: |
 |                |                 |
 
