--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -1,38 +1,52 @@
 # 后端接口概览
 
 + 本文档主要描述后端为前端提供哪些接口及其数据格式；
-+ 最后更新时间2019/4/23，当前版本号v0.1，暂未完成。
++ 最后更新时间2019/4/26，当前版本号v0.3。
 
 ## 用户相关接口
 | 接口名称      | 输入参数                                            | 输出参数                                           | 备注 |
 | :------------ | :-------------------------------------------------- | :------------------------------------------------- | :--- |
 | login         | email, pswd (加密)                                  | user_id, status                                    |      |
+|register|email,pswd(加密), gender, resident_city_id|user_id, status|status=存在 or 注册成功|
 | get_user_info | user_id                                             | user_name, email, gender, resident_city_id, status |      |
 | set_user_info | user_id, user_name, email, gender, resident_city_id | status                                             |      |
-
+| get_frd_msg| user_id|[frd_msg_id, frd_user_id, msg_type, msg_content]|返回用户所有的好友消息（加好友/删好友）|
+| del_frd_msg| user_id, frd_msg_id||删除用户处理过的好友消息|
+| get_trip_msg| user_id|[trip_msg_id, frd_user_id,frd_travel_id, msg_type, msg_content]|返回用户所有的行程关联消息（加入行程/离开行程/修改行程/删除行程）|
+| del_trip_msg| user_id, trip_msg_id||删除用户处理过的行程关联消息|
 ## 旅行相关接口
 | 接口名称              | 输入参数                                                          | 输出参数                                                       | 备注 |
 | :-------------------- | :---------------------------------------------------------------- | :------------------------------------------------------------- | :--- |
-| get_travel_group_list | user_id                                                           | [travel_group_id, travel_group_note], status                   |      |
-| get_travel_list       | travel_group_id                                                   | [travel_id], status                                            |      |
+| get_travel_group_list | user_id                                                           | [travel_group_id, travel_group_note, visibility], status                   |      |
+| get_travel_list       | travel_group_id                                                   | [travel_id]                                            |      |
+| get_relate_travel_list|user_id|[travelid]|返回所有关联了user_id的旅行|
 | get_travel_group_info | travel_group_id                                                   | travel_group_note, status                                      |      |
 | set_travel_group_info | travel_group_id, travel_group_note                                | status                                                         |      |
-| add_travel_group      | user_id, status                                                   | travel_group_id, status                                        |      |
+| add_travel_group      | user_id                                                   | travel_group_id, status                                        |      |
+| del_travel_group      | user_id, travel_group_id|  status                                        |      |
 | get_travel_info       | travel_id                                                         | city_id, time_start, time_end, visibility, travel_note, status |      |
-| set_travel_info       | travel_id, city_id, time_start, time_end, visibility, travel_note |                                                                |
+| set_travel_info       | travel_id, city_id, time_start, time_end, visibility, travel_note |status                                                                |
 | add_travel            | user_id, travel_group_id                                          | travel_id, status                                              |      |
+| del_travel            | user_id, travel_group_id, travel_id| status                                              |      |
+|set_travel_company| user_id, travel_id, frd_user_id|||
++ 注：这里的接口设计逻辑是只允许添加空的travel_group和空的travel，返回一个有效的travel_group_id和travel_id，再进行设置参数
 
 ## 城市相关接口
 | 接口名称        | 输入参数                   | 输出参数                    | 备注                                    |
 | :-------------- | :------------------------- | :-------------------------- | :-------------------------------------- |
-| gps_to_city     | latitude, longitude        | city_id, city_name, status  |                                         |
-| address_to_city | address                    | city_id, city_name, status  | address 是模糊地址字符串，交由 API 处理 |
+| gps_to_city     | latitude, longitude        | city_id, city_name, nation, status  |                                         |
+| address_to_city | address                    | city_id, city_name, nation, status  | address 是模糊地址字符串，交由 API 处理 |
 | city_to_gps     | city_id, city_name, status | latitude, longitude, status |                                         |
-~~疑问：是否需要保留国家信息？~~
++ 保留国家信息，方便前端区分
 
 ## 好友相关接口
 | 接口名称        | 输入参数 | 输出参数                                                | 备注 |
 | :-------------- | :------- | :------------------------------------------------------ | :--- |
-| get_friend_list | user_id  | [friend_user_id, friend_user_name, friend_note], status |      |
+| get_frd_list | user_id  | [frd_user_id, frd_user_name, frd_note], status |      |
+| get_user_id | user_identity| [user_id] |identity可匹配用户名和邮箱|
+| add_frd | user_id, frd_user_id, apply_note, frd_note|status|status=成功发送请求 or 用户不存在 or 已是好友|
+| approve_frd| user_id, frd_user_id, frd_note| status||
 
-~~待添加：加/删好友；查看好友旅行列表；查看关联旅行；添加/删除关联行程~~
++ 注：get_user_id设计给搜索添加好友时使用;有user_id后查看好友行程列表等功能也可以实现。
+
+
