chore: change database definition

--- a/doc/后端数据库概览.md
+++ b/doc/后端数据库概览.md
@@ -4,56 +4,84 @@
 + “行程组”描述一次旅行，“行程”描述一次旅行中到访的一个城市；
 + 目前只存在两种系统消息：加好友请求和关联行程请求，暂不支持用户间消息；
 + 由于 Markdown 语法暂不支持下划线，因此以 `key` 标记主键；
-+ 最后更新时间 2019/4/24，当前版本号v0.2。
++ 最后更新时间 2019/5/11，当前版本号v0.3。
+
+---
 
 ## 用户信息
-| `user_id` | user_name | email |  pswd  |      gender       | resident_city_id |
-| :-------: | :-------: | :---: | :----: | :---------------: | :--------------: |
-|           |           |       | 加密串 | 男/女/其他/未指定 |                  |
+**Users.Users**
+| `user_id` | `email` | pswd_hash  | user_name |            gender             | resident_city_id |
+| :-------: | :-----: | :--------: | :-------: | :---------------------------: | :--------------: |
+|           |         | MD5 加密串 |           | 男`M`/女`F`/其他`O`/未指定`U` |                  |
+
+---
 
 ## 好友关系
-| `user_id` | friend_user_id |     friend_note      |
-| :-------: | :------------: | :------------------: |
-|           |                | 备注信息，任意字符串 |
+**Users.FriendRelations**
+| `user_id` | `friend_user_id` |     friend_note      |
+| :-------: | :--------------: | :------------------: |
+|           |                  | 备注信息，任意字符串 |
+
+---
 
 ## 用户-行程组
+**Travel.TravelGroupOwnership**
 | `user_id` | `travel_group_id` |
 | :-------: | :---------------: |
 |           |                   |
 
+---
+
 ## 行程组
+**Travel.TravelGroups**
 | `travel_group_id` |  travel_group_note   |
 | :---------------: | :------------------: |
 |                   | 备注信息，任意字符串 |
 
+---
+
 ## 行程组-行程
+**Travel.TravelGrouping**
 | `travel_group_id` | `travel_id` |
 | :---------------: | :---------: |
 |                   |             |
 
+---
+
 ## 行程信息
-| `travel_id` | time_start | time_end | city_id |   visibility   |     travel_note      |
-| :---------: | :--------: | :------: | :-----: | :------------: | :------------------: |
-|             |            |          |         | 自己/好友/公开 | 备注信息，任意字符串 |
+**Travel.Travels**
+| `travel_id` | date_start | date_end | city_id |       visibility        |     travel_note      |
+| :---------: | :--------: | :------: | :-----: | :---------------------: | :------------------: |
+|             |            |          |         | 自己`M`/好友`F`/公开`P` | 备注信息，任意字符串 |
+
+---
 
 ## 行程-好友关联
-
+**Travel.TravelAssociation**
 | `travel_id` | company_user_id |
-| :------------: | :-------------: |
-|                |                 |
+| :---------: | :-------------: |
+|             |                 |
+
+---
 
 ## 城市信息
+**Cities.Cities**
+| `city_id` | country_name | province_name | city_name | latitude | longitude |
+| :-------: | :----------: | :-----------: | :-------: | :------: | :-------: |
+|           |              |               |           |          |           |
 
-| `city_id` | city_name | latitude | longitude |
-| :-------: | :-------: | :------: | :-------: |
-|           |           |          |           |
+---
 
 ## 好友请求消息
-| `user_id` | friend_user_id |   msg_type    | msg_content |
-| :-------: | :------------: | :-----------: | :---------: |
-|           |                | 加好友/删好友 |             |
+**Messages.FriendRequests**
+| `msg_id` | `user_id` | friend_user_id |      msg_type       | msg_content |
+| :------: | :-------: | :------------: | :-----------------: | :---------: |
+|          |           |                | 加好友`A`/删好友`D` |             |
+
+---
 
 ## 行程关联消息
-| `user_id` | friend_travel_id |              msg_type               | msg_content |
-| :-------: | :--------------: | :---------------------------------: | :---------: |
-|           |                  | 加入行程/离开行程/修改行程/删除行程 |             |
+**Messages.TravelAssociation**
+| `msg_id` | `user_id` | friend_user_id | friend_travel_id |                            msg_type                             | msg_content |
+| :------: | :-------: | :------------: | :--------------: | :-------------------------------------------------------------: | :---------: |
+|          |           |                |                  | 邀请加入行程`I`/加入行程`A`/离开行程`L`/修改行程`M`/删除行程`D` |             |
