--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -1,14 +1,19 @@
 # 后端接口概览
 
 + 本文档主要描述后端为前端提供哪些接口及其数据格式；
-+ 最后更新时间2019/4/23，当前版本号v0.1，暂未完成。
++ 最后更新时间2019/5/11，当前版本号v0.2，暂未完成。
+
+---
 
 ## 用户相关接口
-| 接口名称      | 输入参数                                            | 输出参数                                           | 备注 |
-| :------------ | :-------------------------------------------------- | :------------------------------------------------- | :--- |
-| login         | email, pswd (加密)                                  | user_id, status                                    |      |
-| get_user_info | user_id                                             | user_name, email, gender, resident_city_id, status |      |
-| set_user_info | user_id, user_name, email, gender, resident_city_id | status                                             |      |
+| 接口名称       | 输入参数                                            | 输出参数                                           | 备注 |
+| :------------- | :-------------------------------------------------- | :------------------------------------------------- | :--- |
+| login          | email, pswd_hash                                    | user_id, status                                    |      |
+| get_user_info  | user_id                                             | user_name, email, gender, resident_city_id, status |      |
+| set_user_info  | user_id, user_name, email, gender, resident_city_id | status                                             |      |
+| reset_password | user_id, old_pswd_hash, new_pswd_hash               | status                                             |      |
+
+---
 
 ## 旅行相关接口
 | 接口名称              | 输入参数                                                          | 输出参数                                                       | 备注 |
@@ -18,9 +23,11 @@
 | get_travel_group_info | travel_group_id                                                   | travel_group_note, status                                      |      |
 | set_travel_group_info | travel_group_id, travel_group_note                                | status                                                         |      |
 | add_travel_group      | user_id, status                                                   | travel_group_id, status                                        |      |
-| get_travel_info       | travel_id                                                         | city_id, time_start, time_end, visibility, travel_note, status |      |
-| set_travel_info       | travel_id, city_id, time_start, time_end, visibility, travel_note |                                                                |
+| get_travel_info       | travel_id                                                         | city_id, date_start, date_end, visibility, travel_note, status |      |
+| set_travel_info       | travel_id, city_id, date_start, date_end, visibility, travel_note |                                                                |
 | add_travel            | user_id, travel_group_id                                          | travel_id, status                                              |      |
+
+---
 
 ## 城市相关接口
 | 接口名称        | 输入参数                   | 输出参数                    | 备注                                    |
@@ -29,6 +36,8 @@
 | address_to_city | address                    | city_id, city_name, status  | address 是模糊地址字符串，交由 API 处理 |
 | city_to_gps     | city_id, city_name, status | latitude, longitude, status |                                         |
 ~~疑问：是否需要保留国家信息？~~
+
+---
 
 ## 好友相关接口
 | 接口名称        | 输入参数 | 输出参数                                                | 备注 |
