chore: remove misc files and format code

--- a/doc/后端数据库概览.md
+++ b/doc/后端数据库概览.md
@@ -25,7 +25,7 @@
 ---
 
 ## 用户-行程组
-**Travel.TravelGroupOwnership**
+**Travels.TravelGroupOwnership**
 | `user_id` | `travel_group_id` |
 | :-------: | :---------------: |
 |           |                   |
@@ -33,7 +33,7 @@
 ---
 
 ## 行程组
-**Travel.TravelGroups**
+**Travels.TravelGroups**
 | `travel_group_id` |  travel_group_note   |
 | :---------------: | :------------------: |
 |                   | 备注信息，任意字符串 |
@@ -41,7 +41,7 @@
 ---
 
 ## 行程组-行程
-**Travel.TravelGrouping**
+**Travels.TravelGrouping**
 | `travel_group_id` | `travel_id` |
 | :---------------: | :---------: |
 |                   |             |
@@ -49,7 +49,7 @@
 ---
 
 ## 行程信息
-**Travel.Travels**
+**Travels.Travels**
 | `travel_id` | date_start | date_end | city_id |       visibility        |     travel_note      |
 | :---------: | :--------: | :------: | :-----: | :---------------------: | :------------------: |
 |             |            |          |         | 自己`M`/好友`F`/公开`P` | 备注信息，任意字符串 |
@@ -57,7 +57,7 @@
 ---
 
 ## 行程-好友关联
-**Travel.TravelAssociation**
+**Travels.TravelAssociation**
 | `travel_id` | company_user_id |
 | :---------: | :-------------: |
 |             |                 |
