feat: add Django backend URL Configuration

--- a/doc/后端数据库概览.md
+++ b/doc/后端数据库概览.md
@@ -9,7 +9,9 @@
 ---
 
 ## 用户信息
+
 **Users.Users**
+
 | `user_id` | `email` | pswd_hash  | user_name |            gender             | resident_city_id |
 | :-------: | :-----: | :--------: | :-------: | :---------------------------: | :--------------: |
 |           |         | MD5 加密串 |           | 男`M`/女`F`/其他`O`/未指定`U` |                  |
@@ -17,7 +19,9 @@
 ---
 
 ## 好友关系
+
 **Users.FriendRelations**
+
 | `user_id` | `friend_user_id` |     friend_note      |
 | :-------: | :--------------: | :------------------: |
 |           |                  | 备注信息，任意字符串 |
@@ -25,7 +29,9 @@
 ---
 
 ## 用户-行程组
+
 **Travels.TravelGroupOwnership**
+
 | `user_id` | `travel_group_id` |
 | :-------: | :---------------: |
 |           |                   |
@@ -33,7 +39,9 @@
 ---
 
 ## 行程组
+
 **Travels.TravelGroups**
+
 | `travel_group_id` |  travel_group_note   |
 | :---------------: | :------------------: |
 |                   | 备注信息，任意字符串 |
@@ -41,7 +49,9 @@
 ---
 
 ## 行程组-行程
+
 **Travels.TravelGrouping**
+
 | `travel_group_id` | `travel_id` |
 | :---------------: | :---------: |
 |                   |             |
@@ -49,7 +59,9 @@
 ---
 
 ## 行程信息
+
 **Travels.Travels**
+
 | `travel_id` | date_start | date_end | city_id |       visibility        |     travel_note      |
 | :---------: | :--------: | :------: | :-----: | :---------------------: | :------------------: |
 |             |            |          |         | 自己`M`/好友`F`/公开`P` | 备注信息，任意字符串 |
@@ -57,7 +69,9 @@
 ---
 
 ## 行程-好友关联
+
 **Travels.TravelAssociation**
+
 | `travel_id` | company_user_id |
 | :---------: | :-------------: |
 |             |                 |
@@ -65,7 +79,9 @@
 ---
 
 ## 城市信息
+
 **Cities.Cities**
+
 | `city_id` | country_name | province_name | city_name | latitude | longitude |
 | :-------: | :----------: | :-----------: | :-------: | :------: | :-------: |
 |           |              |               |           |          |           |
@@ -73,7 +89,9 @@
 ---
 
 ## 好友请求消息
+
 **Messages.FriendRequests**
+
 | `msg_id` | `user_id` | friend_user_id |      msg_type       | msg_content |
 | :------: | :-------: | :------------: | :-----------------: | :---------: |
 |          |           |                | 加好友`A`/删好友`D` |             |
@@ -81,7 +99,9 @@
 ---
 
 ## 行程关联消息
+
 **Messages.TravelAssociation**
-| `msg_id` | `user_id` | friend_user_id | friend_travel_id |                            msg_type                             | msg_content |
+
+| `msg_id` | `user_id` | friend_user_id | travel_id |                            msg_type                             | msg_content |
 | :------: | :-------: | :------------: | :--------------: | :-------------------------------------------------------------: | :---------: |
 |          |           |                |                  | 邀请加入行程`I`/加入行程`A`/离开行程`L`/修改行程`M`/删除行程`D` |             |
