doc: modify api docs

--- a/doc/后端数据库概览.md
+++ b/doc/后端数据库概览.md
@@ -4,23 +4,33 @@
 + “行程组”描述一次旅行，“行程”描述一次旅行中到访的一个城市；
 + 目前只存在两种系统消息：加好友请求和关联行程请求，暂不支持用户间消息；
 + 由于 Markdown 语法暂不支持下划线，因此以 `key` 标记主键；
-+ 最后更新时间 2019/5/11，当前版本号v0.3。
++ 最后更新时间 2019/5/15，当前版本号 v0.4。
+
+---
+
+## 用户登录信息
+
+**User.User**
+
+| `user_id` | `email` | pswd_hash  |
+| :-------: | :-----: | :--------: |
+|           |         | MD5 加密串 |
 
 ---
 
 ## 用户信息
 
-**Users.Users**
+**User.UserInfo**
 
-| `user_id` | `email` | pswd_hash  | user_name |            gender             | resident_city_id |
-| :-------: | :-----: | :--------: | :-------: | :---------------------------: | :--------------: |
-|           |         | MD5 加密串 |           | 男`M`/女`F`/其他`O`/未指定`U` |                  |
+| `user_id` | user_name |            gender             | resident_city_id |
+| :-------: | :-------: | :---------------------------: | :--------------: |
+|           |           | 男`M`/女`F`/其他`O`/未指定`U` |                  |
 
 ---
 
 ## 好友关系
 
-**Users.FriendRelations**
+**User.FriendRelation**
 
 | `user_id` | `friend_user_id` |     friend_note      |
 | :-------: | :--------------: | :------------------: |
@@ -30,7 +40,7 @@
 
 ## 用户-行程组
 
-**Travels.TravelGroupOwnership**
+**Travel.TravelGroupOwnership**
 
 | `user_id` | `travel_group_id` |
 | :-------: | :---------------: |
@@ -40,7 +50,7 @@
 
 ## 行程组
 
-**Travels.TravelGroups**
+**Travel.TravelGroup**
 
 | `travel_group_id` |  travel_group_note   |
 | :---------------: | :------------------: |
@@ -50,7 +60,7 @@
 
 ## 行程组-行程
 
-**Travels.TravelGrouping**
+**Travel.TravelGrouping**
 
 | `travel_group_id` | `travel_id` |
 | :---------------: | :---------: |
@@ -60,7 +70,7 @@
 
 ## 行程信息
 
-**Travels.Travels**
+**Travel.Travel**
 
 | `travel_id` | date_start | date_end | city_id |       visibility        |     travel_note      |
 | :---------: | :--------: | :------: | :-----: | :---------------------: | :------------------: |
@@ -70,7 +80,7 @@
 
 ## 行程-好友关联
 
-**Travels.TravelAssociation**
+**Travel.TravelAssociation**
 
 | `travel_id` | company_user_id |
 | :---------: | :-------------: |
@@ -80,7 +90,7 @@
 
 ## 城市信息
 
-**Cities.Cities**
+**City.City**
 
 | `city_id` | country_name | province_name | city_name | latitude | longitude |
 | :-------: | :----------: | :-----------: | :-------: | :------: | :-------: |
@@ -90,7 +100,7 @@
 
 ## 好友请求消息
 
-**Messages.FriendRequests**
+**Message.FriendRequest**
 
 | `msg_id` | `user_id` | friend_user_id |      msg_type       | msg_content |
 | :------: | :-------: | :------------: | :-----------------: | :---------: |
@@ -100,8 +110,8 @@
 
 ## 行程关联消息
 
-**Messages.TravelAssociation**
+**Message.TravelAssociation**
 
 | `msg_id` | `user_id` | friend_user_id | travel_id |                            msg_type                             | msg_content |
-| :------: | :-------: | :------------: | :--------------: | :-------------------------------------------------------------: | :---------: |
-|          |           |                |                  | 邀请加入行程`I`/加入行程`A`/离开行程`L`/修改行程`M`/删除行程`D` |             |
+| :------: | :-------: | :------------: | :-------: | :-------------------------------------------------------------: | :---------: |
+|          |           |                |           | 邀请加入行程`I`/加入行程`A`/离开行程`L`/修改行程`M`/删除行程`D` |             |
