--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -1,64 +1,64 @@
 # 后端接口概览
 
 + 本文档主要描述后端为前端提供哪些接口及其数据格式；
-+ 如没有特殊说明，返回的status均为0表示成功，非零表示失败；
-+ 最后更新时间2019/5/11，当前版本号v0.2，暂未完成。
++ 如没有特殊说明，返回的 status 均为 0 表示成功，非零表示失败；
++ 最后更新时间 2019/5/15，当前版本号 v0.3，暂未完成。
 
 ---
 
 ## 用户相关接口
 
-| 接口名称       | 输入参数                                            | 输出参数                                                                | 备注                                                              |
-| :------------- | :-------------------------------------------------- | :---------------------------------------------------------------------- | :---------------------------------------------------------------- |
-| login          | email, pswd_hash                                    | user_id, status                                                         |                                                                   |
-| register       | email,pswd_hash_, gender, resident_city_id          | user_id, status                                                         | status=存在 or 注册成功                                           |
-| get_user_info  | user_id                                             | user_name, email, gender, resident_city_id, status                      |                                                                   |
-| set_user_info  | user_id, user_name, email, gender, resident_city_id | status                                                                  |                                                                   |
-| reset_password | user_id, old_pswd_hash, new_pswd_hash               | status                                                                  |                                                                   |
-| get_friend_msg | user_id                                             | [friend_msg_id, friend_user_id, msg_type, msg_content]                  | 返回用户所有的好友消息（加好友/删好友）                           |
-| del_friend_msg | user_id, friend_msg_id                              |                                                                         | 删除用户处理过的好友消息                                          |
-| get_travel_msg | user_id                                             | [travel_msg_id, friend_user_id,friend_travel_id, msg_type, msg_content] | 返回用户所有的行程关联消息（加入行程/离开行程/修改行程/删除行程） |
-| del_travel_msg | user_id, travel_msg_id                              |                                                                         | 删除用户处理过的行程关联消息                                      |
+| 接口名称       | 输入参数                                              | 输出参数                                                                | 备注                                                              |
+| :------------- | :---------------------------------------------------- | :---------------------------------------------------------------------- | :---------------------------------------------------------------- |
+| login          | email, pswd_hash                                      | user_id, session_id, status                                             |                                                                   |
+| register       | email, pswd_hash, user_name, gender, resident_city_id | user_id, status                                                         | status=存在 or 注册成功                                           |
+| get_user_info  | user_id, session_id                                   | user_name, email, gender, resident_city_id, status                      |                                                                   |
+| set_user_info  | user_id, user_name, email, gender, resident_city_id   | status                                                                  |                                                                   |
+| reset_password | user_id, session_id, old_pswd_hash, new_pswd_hash     | status                                                                  |                                                                   |
+| get_friend_msg | user_id, session_id                                   | [friend_msg_id, friend_user_id, msg_type, msg_content]                  | 返回用户所有的好友消息（加好友/删好友）                           |
+| del_friend_msg | user_id, session_id, friend_msg_id                    |                                                                         | 删除用户处理过的好友消息                                          |
+| get_travel_msg | user_id, session_id                                   | [travel_msg_id, friend_user_id,friend_travel_id, msg_type, msg_content] | 返回用户所有的行程关联消息（加入行程/离开行程/修改行程/删除行程） |
+| del_travel_msg | user_id, session_id, travel_msg_id                    |                                                                         | 删除用户处理过的行程关联消息                                      |
 
 ---
 
 ## 旅行相关接口
 
-| 接口名称               | 输入参数                                                          | 输出参数                                                       | 备注                        |
-| :--------------------- | :---------------------------------------------------------------- | :------------------------------------------------------------- | :-------------------------- |
-| get_travel_group_list  | user_id                                                           | [travel_group_id, travel_group_note, visibility], status       |                             |
-| get_travel_list        | travel_group_id                                                   | [travel_id]                                                    |                             |
-| get_relate_travel_list | user_id                                                           | [travelid]                                                     | 返回所有关联了user_id的旅行 |
-| get_travel_group_info  | travel_group_id                                                   | travel_group_note, status                                      |                             |
-| set_travel_group_info  | travel_group_id, travel_group_note                                | status                                                         |                             |
-| add_travel_group       | user_id                                                           | travel_group_id, status                                        |                             |
-| del_travel_group       | user_id, travel_group_id                                          | status                                                         |                             |
-| get_travel_info        | travel_id                                                         | city_id, time_start, time_end, visibility, travel_note, status |                             |
-| set_travel_info        | travel_id, city_id, time_start, time_end, visibility, travel_note | status                                                         |
-| add_travel             | user_id, travel_group_id                                          | travel_id, status                                              |                             |
-| del_travel             | user_id, travel_group_id, travel_id                               | status                                                         |                             |
-| set_travel_company     | user_id, travel_id, friend_user_id                                |                                                                |                             |
+| 接口名称               | 输入参数                                                                               | 输出参数                                                       | 备注                        |
+| :--------------------- | :------------------------------------------------------------------------------------- | :------------------------------------------------------------- | :-------------------------- |
+| get_travel_group_list  | user_id, session_id                                                                    | [travel_group_id, travel_group_note, visibility], status       |                             |
+| get_travel_list        | user_id, session_id, travel_group_id                                                   | [travel_id]                                                    |                             |
+| get_relate_travel_list | user_id, session_id                                                                    | [travel_id]                                                    | 返回所有关联了user_id的旅行 |
+| get_travel_group_info  | user_id, session_id, travel_group_id                                                   | travel_group_note, status                                      |                             |
+| set_travel_group_info  | user_id, session_id, travel_group_id, travel_group_note                                | status                                                         |                             |
+| add_travel_group       | user_id, session_id                                                                    | travel_group_id, status                                        |                             |
+| del_travel_group       | user_id, session_id, travel_group_id                                                   | status                                                         |                             |
+| get_travel_info        | user_id, session_id, travel_id                                                         | city_id, time_start, time_end, visibility, travel_note, status |                             |
+| set_travel_info        | user_id, session_id, travel_id, city_id, time_start, time_end, visibility, travel_note | status                                                         |
+| add_travel             | user_id, session_id, travel_group_id                                                   | travel_id, status                                              |                             |
+| del_travel             | user_id, session_id, travel_group_id, travel_id                                        | status                                                         |                             |
+| set_travel_company     | user_id, session_id, travel_id, friend_user_id                                         |                                                                |                             |
 + 注：这里的接口设计逻辑是只允许添加空的 travel_group 和空的 travel，返回一个有效的 travel_group_id 和 travel_id，再进行设置参数
 
 ---
 
 ## 城市相关接口
 
-| 接口名称        | 输入参数                               | 输出参数                                                | 备注                                    |
-| :-------------- | :------------------------------------- | :------------------------------------------------------ | :-------------------------------------- |
-| gps_to_city     | latitude, longitude                    | city_id, city_name, country_name, province_name, status |                                         |
-| address_to_city | address                                | city_id, city_name, country_name, province_name, status | address 是模糊地址字符串，交由 API 处理 |
-| city_to_gps     | country_name, province_name, city_name | city_id, latitude, longitude, status                    |                                         |
+| 接口名称        | 输入参数            | 输出参数                                                                     | 备注                                    |
+| :-------------- | :------------------ | :--------------------------------------------------------------------------- | :-------------------------------------- |
+| gps_to_city     | latitude, longitude | city_id, country_name, province_name, city_name, latitude, longitude, status |                                         |
+| address_to_city | address             | city_id, country_name, province_name, city_name, latitude, longitude, status | address 是模糊地址字符串，交由 API 处理 |
 + 保留国家信息，方便前端区分
 
 ---
 
 ## 好友相关接口
 
-| 接口名称        | 输入参数                                         | 输出参数                                                | 备注                                          |
-| :-------------- | :----------------------------------------------- | :------------------------------------------------------ | :-------------------------------------------- |
-| get_friend_list | user_id                                          | [friend_user_id, friend_user_name, friend_note], status |                                               |
-| get_user_id     | user_identity                                    | [user_id]                                               | identity可匹配用户名和邮箱                    |
-| add_friend      | user_id, friend_user_id, apply_note, friend_note | status                                                  | status=成功发送请求 or 用户不存在 or 已是好友 |
-| approve_friend  | user_id, friend_user_id, friend_note             | status                                                  |                                               |
-+ 注：get_user_id设计给搜索添加好友时使用;有user_id后查看好友行程列表等功能也可以实现。
+| 接口名称                 | 输入参数                                                     | 输出参数                                                | 备注                                           |
+| :----------------------- | :----------------------------------------------------------- | :------------------------------------------------------ | :--------------------------------------------- |
+| get_friend_list          | user_id, session_id                                          | [friend_user_id, friend_user_name, friend_note], status |                                                |
+| get_user_id_by_email     | user_id, session_id, query_email                             | [user_id], status                                       |                                                |
+| get_user_id_by_user_name | user_id, session_id, query_user_name                         | [user_id], status                                       |                                                |
+| add_friend               | user_id, session_id, friend_user_id, apply_note, friend_note | status                                                  | status= 成功发送请求 or 用户不存在 or 已是好友 |
+| set_friend_note          | user_id, session_id, friend_user_id, friend_note             | status                                                  |                                                |
++ 注：get_user_id 设计给搜索添加好友时使用;有 user_id 后查看好友行程列表等功能也可以实现。
