doc: modify database table doc

--- a/doc/后端数据库概览.md
+++ b/doc/后端数据库概览.md
@@ -28,6 +28,16 @@
 
 ---
 
+## 用户回话信息
+
+**User.UserSession**
+
+| `user_id` |      session_id       |
+| :-------: | :-------------------: |
+|           | 每次登录自动生成 UUID |
+
+---
+
 ## 好友关系
 
 **User.FriendRelation**
