chore: add name and color field to TravelGroup model

--- a/doc/后端数据库概览.md
+++ b/doc/后端数据库概览.md
@@ -62,9 +62,9 @@
 
 **Travel.TravelGroup**
 
-| `travel_group_id` |  travel_group_note   |
-| :---------------: | :------------------: |
-|                   | 备注信息，任意字符串 |
+| `travel_group_id` |    travel_group_name    |  travel_group_note   | travel_group_color  |
+| :---------------: | :---------------------: | :------------------: | :-----------------: |
+|                   | 名字信息，20 字符字符串 | 备注信息，任意字符串 | 显示颜色，32 位 int |
 
 ---
 
