feat: add api remove_travel

--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -8,17 +8,17 @@
 
 ## 用户相关接口
 
-| 接口名称       | 输入参数                                              | 输出参数                                                                | 备注                                                              |
-| :------------- | :---------------------------------------------------- | :---------------------------------------------------------------------- | :---------------------------------------------------------------- |
-| login          | email, pswd_hash                                      | user_id, session_id, status                                             |                                                                   |
-| register       | email, pswd_hash, user_name, gender, resident_city_id | user_id, status                                                         | status=存在 or 注册成功                                           |
-| get_user_info  | user_id, session_id                                   | user_name, email, gender, resident_city_id, status                      |                                                                   |
-| set_user_info  | user_id, user_name, email, gender, resident_city_id   | status                                                                  |                                                                   |
-| reset_password | user_id, session_id, old_pswd_hash, new_pswd_hash     | status                                                                  |                                                                   |
-| get_friend_msg | user_id, session_id                                   | [friend_msg_id, friend_user_id, msg_type, msg_content]                  | 返回用户所有的好友消息（加好友/删好友）                           |
-| del_friend_msg | user_id, session_id, friend_msg_id                    |                                                                         | 删除用户处理过的好友消息                                          |
-| get_travel_msg | user_id, session_id                                   | [travel_msg_id, friend_user_id,friend_travel_id, msg_type, msg_content] | 返回用户所有的行程关联消息（加入行程/离开行程/修改行程/删除行程） |
-| del_travel_msg | user_id, session_id, travel_msg_id                    |                                                                         | 删除用户处理过的行程关联消息                                      |
+| 接口名称          | 输入参数                                              | 输出参数                                                                | 备注                                                              |
+| :---------------- | :---------------------------------------------------- | :---------------------------------------------------------------------- | :---------------------------------------------------------------- |
+| login             | email, pswd_hash                                      | user_id, session_id, status                                             |                                                                   |
+| register          | email, pswd_hash, user_name, gender, resident_city_id | user_id, status                                                         | status=存在 or 注册成功                                           |
+| get_user_info     | user_id, session_id                                   | user_name, email, gender, resident_city_id, status                      |                                                                   |
+| set_user_info     | user_id, user_name, email, gender, resident_city_id   | status                                                                  |                                                                   |
+| reset_password    | user_id, session_id, old_pswd_hash, new_pswd_hash     | status                                                                  |                                                                   |
+| get_friend_msg    | user_id, session_id                                   | [friend_msg_id, friend_user_id, msg_type, msg_content]                  | 返回用户所有的好友消息（加好友/删好友）                           |
+| remove_friend_msg | user_id, session_id, friend_msg_id                    |                                                                         | 删除用户处理过的好友消息                                          |
+| get_travel_msg    | user_id, session_id                                   | [travel_msg_id, friend_user_id,friend_travel_id, msg_type, msg_content] | 返回用户所有的行程关联消息（加入行程/离开行程/修改行程/删除行程） |
+| remove_travel_msg | user_id, session_id, travel_msg_id                    |                                                                         | 删除用户处理过的行程关联消息                                      |
 
 ---
 
@@ -32,11 +32,11 @@
 | get_travel_group_info  | user_id, session_id, travel_group_id                                                   | travel_group_note, status                                      |                             |
 | set_travel_group_info  | user_id, session_id, travel_group_id, travel_group_note                                | status                                                         |                             |
 | add_travel_group       | user_id, session_id                                                                    | travel_group_id, status                                        |                             |
-| del_travel_group       | user_id, session_id, travel_group_id                                                   | status                                                         |                             |
+| remove_travel_group    | user_id, session_id, travel_group_id                                                   | status                                                         |                             |
 | get_travel_info        | user_id, session_id, travel_id                                                         | city_id, time_start, time_end, visibility, travel_note, status |                             |
 | set_travel_info        | user_id, session_id, travel_id, city_id, time_start, time_end, visibility, travel_note | status                                                         |
 | add_travel             | user_id, session_id, travel_group_id                                                   | travel_id, status                                              |                             |
-| del_travel             | user_id, session_id, travel_group_id, travel_id                                        | status                                                         |                             |
+| remove_travel          | user_id, session_id, travel_group_id, travel_id                                        | status                                                         |                             |
 | set_travel_company     | user_id, session_id, travel_id, friend_user_id                                         |                                                                |                             |
 + 注：这里的接口设计逻辑是只允许添加空的 travel_group 和空的 travel，返回一个有效的 travel_group_id 和 travel_id，再进行设置参数
 
