--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -2,7 +2,7 @@
 
 + 本文档主要描述后端为前端提供哪些接口及其数据格式；
 + 如没有特殊说明，返回的 status 均为 0 表示成功，非零表示失败；
-+ 最后更新时间 2019/5/15，当前版本号 v0.3，暂未完成。
++ 最后更新时间 2019/5/23，当前版本号 v0.4，暂未完成。
 
 ---
 
@@ -10,15 +10,16 @@
 
 | 接口名称          | 输入参数                                              | 输出参数                                                                | 备注                                                              |
 | :---------------- | :---------------------------------------------------- | :---------------------------------------------------------------------- | :---------------------------------------------------------------- |
-| login             | email, pswd_hash                                      | user_id, session_id, status                                             |                                                                   |
+| login             | email, pswd_hash                                      | user_id, session_id, status                                             | pswd_hash是32位char                                                                  |
 | register          | email, pswd_hash, user_name, gender, resident_city_id | user_id, status                                                         | status=存在 or 注册成功                                           |
-| get_user_info     | user_id, session_id                                   | user_name, email, gender, resident_city_id, status                      |                                                                   |
-| set_user_info     | user_id, user_name, email, gender, resident_city_id   | status                                                                  |                                                                   |
-| reset_password    | user_id, session_id, old_pswd_hash, new_pswd_hash     | status                                                                  |                                                                   |
+|logout|user_id, session_id|status||
+| get_user_info     | user_id, session_id                                   | user_name, email, gender, resident_city_id, comment, status                      |  comment是个性化签名                                                               |
+| set_user_info     | user_id, user_name, email, gender, resident_city_id, comment   | status                                                                  |                                                                   |
+| change_password    | user_id, session_id, old_pswd_hash, new_pswd_hash     | status                                                                  |                                                                   |
 | get_friend_msg    | user_id, session_id                                   | [friend_msg_id, friend_user_id, msg_type, msg_content]                  | 返回用户所有的好友消息（加好友/删好友）                           |
-| remove_friend_msg | user_id, session_id, friend_msg_id                    |                                                                         | 删除用户处理过的好友消息                                          |
+| respond_friend_msg | user_id, session_id, friend_msg_id                    |                                                                         | 删除用户处理过的好友消息                                          |
 | get_travel_msg    | user_id, session_id                                   | [travel_msg_id, friend_user_id,friend_travel_id, msg_type, msg_content] | 返回用户所有的行程关联消息（加入行程/离开行程/修改行程/删除行程） |
-| remove_travel_msg | user_id, session_id, travel_msg_id                    |                                                                         | 删除用户处理过的行程关联消息                                      |
+| respond_travel_msg | user_id, session_id, travel_msg_id                    |                                                                         | 删除用户处理过的行程关联消息                                      |
 
 ---
 
@@ -26,18 +27,20 @@
 
 | 接口名称               | 输入参数                                                                               | 输出参数                                                       | 备注                        |
 | :--------------------- | :------------------------------------------------------------------------------------- | :------------------------------------------------------------- | :-------------------------- |
-| get_travel_group_list  | user_id, session_id                                                                    | [travel_group_id, travel_group_note, visibility], status       |                             |
+| get_travel_group_list  | user_id, session_id                                                                    | [travel_group_id], status       |                             |
 | get_travel_list        | user_id, session_id, travel_group_id                                                   | [travel_id]                                                    |                             |
 | get_relate_travel_list | user_id, session_id                                                                    | [travel_id]                                                    | 返回所有关联了user_id的旅行 |
-| get_travel_group_info  | user_id, session_id, travel_group_id                                                   | travel_group_note, status                                      |                             |
+| get_travel_group_info  | user_id, session_id, travel_group_id                                                   | travel_group_name, travel_group_note, travel_group_color, visibility, status                                      |              color是6位char               |
 | set_travel_group_info  | user_id, session_id, travel_group_id, travel_group_note                                | status                                                         |                             |
 | add_travel_group       | user_id, session_id                                                                    | travel_group_id, status                                        |                             |
-| remove_travel_group    | user_id, session_id, travel_group_id                                                   | status                                                         |                             |
+| del_travel_group    | user_id, session_id, travel_group_id                                                   | status                                                         |                             |
 | get_travel_info        | user_id, session_id, travel_id                                                         | city_id, time_start, time_end, visibility, travel_note, status |                             |
 | set_travel_info        | user_id, session_id, travel_id, city_id, time_start, time_end, visibility, travel_note | status                                                         |
 | add_travel             | user_id, session_id, travel_group_id                                                   | travel_id, status                                              |                             |
-| remove_travel          | user_id, session_id, travel_group_id, travel_id                                        | status                                                         |                             |
-| set_travel_company     | user_id, session_id, travel_id, friend_user_id                                         |                                                                |                             |
+| del_travel          | user_id, session_id, travel_group_id, travel_id                                        | status                                                         |                             |
+| add_travel_company     | user_id, session_id, travel_id, friend_user_id                                         |       status                                                         |                             |
+| get_travel_company     | user_id, session_id, travel_id                                     |      status, [friend_user_id]                                                          |                             |
+| del_travel_company     | user_id, session_id, travel_id, friend_user_id                                         |                   status                                             |                             |
 + 注：这里的接口设计逻辑是只允许添加空的 travel_group 和空的 travel，返回一个有效的 travel_group_id 和 travel_id，再进行设置参数
 
 ---
@@ -47,8 +50,9 @@
 | 接口名称        | 输入参数            | 输出参数                                                                     | 备注                                    |
 | :-------------- | :------------------ | :--------------------------------------------------------------------------- | :-------------------------------------- |
 | gps_to_city     | latitude, longitude | city_id, country_name, province_name, city_name, latitude, longitude, status |                                         |
-| address_to_city | address             | city_id, country_name, province_name, city_name, latitude, longitude, status | address 是模糊地址字符串，交由 API 处理 |
-+ 保留国家信息，方便前端区分
+| address_to_city_list | address             |[city_id] | address 是模糊地址字符串，交由 API 处理 | 
+|city_id_to_city|city_id|status, country_name, province_name, city_name, latitude, longitude| |
++ 保留国家信息，方便前端区分 |
 
 ---
 
@@ -56,9 +60,24 @@
 
 | 接口名称                 | 输入参数                                                     | 输出参数                                                | 备注                                           |
 | :----------------------- | :----------------------------------------------------------- | :------------------------------------------------------ | :--------------------------------------------- |
-| get_friend_list          | user_id, session_id                                          | [friend_user_id, friend_user_name, friend_note], status |                                                |
+| get_friend_list          | user_id, session_id                                          | [friend_user_id], status |                                                |
 | get_user_id_by_email     | user_id, session_id, query_email                             | [user_id], status                                       |                                                |
 | get_user_id_by_user_name | user_id, session_id, query_user_name                         | [user_id], status                                       |                                                |
 | add_friend               | user_id, session_id, friend_user_id, apply_note, friend_note | status                                                  | status= 成功发送请求 or 用户不存在 or 已是好友 |
+| del_friend               | user_id, session_id, friend_user_id| status                                                  |  |
 | set_friend_note          | user_id, session_id, friend_user_id, friend_note             | status                                                  |                                                |
+|reset_friend_note |user_id, session_id, friend_user_id|status| 
+|get_other_user_info| user_id |user_id, user_name, email, gender, resident_city_id, comment, is_friend, status| |
+|get_other_user_travel_group_id| user_id|[travel_group_id], status |
+|get_other_travel...|||旅行相关接口的getter函数都实现get other|
 + 注：get_user_id 设计给搜索添加好友时使用;有 user_id 后查看好友行程列表等功能也可以实现。
+
+---
+
+## 推荐系统接口
+| 接口名称                 | 输入参数                                                     | 输出参数                                                | 备注                                           |
+| :----------------------- | :----------------------------------------------------------- | :------------------------------------------------------ | :--------------------------------------------- |
+|copy_friend_travel|user_id, session_id, travel_id|status, new_travel_id|需要判断是不是friend? |
+|recommend_friend_list|user_id, session_id|status, [friend_id]|
+|recommend_travel|user_id, session_id|status, [city_id]||
+|recommend_travel_by_travel_group|user_id, session_id, travel_group_id|status, [city_id]||
