--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -67,8 +67,8 @@
 | del_friend               | user_id, session_id, friend_user_id| status                                                  |  |
 | set_friend_note          | user_id, session_id, friend_user_id, friend_note             | status                                                  |                                                |
 |reset_friend_note |user_id, session_id, friend_user_id|status| 
-|get_other_user_info| user_id |user_id, user_name, email, gender, resident_city_id, comment, is_friend, status| |
-|get_other_user_travel_group_id| user_id|[travel_group_id], status |
+|get_other_user_info| user_id, session_id, other_user_id |user_id, user_name, email, gender, resident_city_id, comment, is_friend, status| |
+|get_other_user_travel_group_id| user_id, session_id, other_user_id|[travel_group_id], status |
 |get_other_travel...|||旅行相关接口的getter函数都实现get other|
 + 注：get_user_id 设计给搜索添加好友时使用;有 user_id 后查看好友行程列表等功能也可以实现。
 
