chore: add field comment to UserInfo model

--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -10,11 +10,11 @@
 
 | 接口名称           | 输入参数                                                     | 输出参数                                                                               | 备注                                                              |
 | :----------------- | :----------------------------------------------------------- | :------------------------------------------------------------------------------------- | :---------------------------------------------------------------- |
-| login              | email, pswd_hash                                             | user_id, session_id, status                                                            | pswd_hash 是32位 char                                               |
-| register           | email, pswd_hash, user_name, gender, resident_city_id        | user_id, status                                                                        | status = 存在 or 注册成功                                           |
+| login              | email, pswd_hash                                             | user_id, session_id, status                                                            | pswd_hash 是32位 char                                             |
+| register           | email, pswd_hash, user_name, gender, resident_city_id        | user_id, status                                                                        | status = 存在 or 注册成功, comment 自动置为空串                   |
 | logout             | user_id, session_id                                          | status                                                                                 |                                                                   |
-| get_user_info      | user_id, session_id                                          | user_name, email, gender, resident_city_id, comment, status                            | comment 是个性化签名                                               |
-| set_user_info      | user_id, user_name, email, gender, resident_city_id, comment | status                                                                                 |                                                                   |
+| get_user_info      | user_id, session_id                                          | user_name, email, gender, resident_city_id, comment, status                            | comment 是个性化签名                                              |
+| set_user_info      | user_id, user_name, email, gender, comment, resident_city_id | status                                                                                 |                                                                   |
 | reset_password     | user_id, session_id, old_pswd_hash, new_pswd_hash            | status                                                                                 |                                                                   |
 | get_friend_msg     | user_id, session_id                                          | count, [friend_msg_id, friend_user_id, msg_type, msg_content], status                  | 返回用户所有的好友消息（加好友/删好友）                           |
 | respond_friend_msg | user_id, session_id, friend_msg_id                           |                                                                                        | 删除用户处理过的好友消息                                          |
@@ -35,7 +35,7 @@
 | set_travel_group_info   | user_id, session_id, travel_group_id, travel_group_note                                | status                                                                       |                               |
 | add_travel_group        | user_id, session_id                                                                    | travel_group_id, status                                                      |                               |
 | remove_travel_group     | user_id, session_id, travel_group_id                                                   | status                                                                       |                               |
-| get_travel_info         | user_id, session_id, travel_id                                                         | city_id, date_start, date_end, visibility, travel_note, status               | date 格式 "yyyy-mm-dd"                   |
+| get_travel_info         | user_id, session_id, travel_id                                                         | city_id, date_start, date_end, visibility, travel_note, status               | date 格式 "yyyy-mm-dd"        |
 | set_travel_info         | user_id, session_id, travel_id, city_id, date_start, date_end, visibility, travel_note | status                                                                       |
 | add_travel              | user_id, session_id, travel_group_id                                                   | travel_id, status                                                            |                               |
 | remove_travel           | user_id, session_id, travel_group_id, travel_id                                        | status                                                                       |                               |
