feat: add api logout

--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -10,9 +10,9 @@
 
 | 进度  | 接口名称           | 输入参数                                                     | 输出参数                                                                               | 备注                                                              |
 | :---: | :----------------- | :----------------------------------------------------------- | :------------------------------------------------------------------------------------- | :---------------------------------------------------------------- |
-|   √   | login              | email, pswd_hash                                             | user_id, session_id, status                                                            | pswd_hash 是32位 char                                             |
 |   √   | register           | email, pswd_hash, user_name, gender, resident_city_id        | user_id, status                                                                        | status = 存在 or 注册成功, comment 自动置为空串                   |
-|   ×   | logout             | user_id, session_id                                          | status                                                                                 |                                                                   |
+|   √   | login              | email, pswd_hash                                             | user_id, session_id, status                                                            | pswd_hash 是32位 char                                             |
+|   √   | logout             | user_id, session_id                                          | status                                                                                 |                                                                   |
 |   √   | get_user_info      | user_id, session_id                                          | user_name, email, gender, resident_city_id, comment, status                            | comment 是个性化签名                                              |
 |   √   | set_user_info      | user_id, user_name, email, gender, comment, resident_city_id | status                                                                                 |                                                                   |
 |   √   | reset_password     | user_id, session_id, old_pswd_hash, new_pswd_hash            | status                                                                                 |                                                                   |
